# hw13web

./: README.md  pyproject.toml
bank/bank/: settings.py  urls.py
bank/bankapp/: models.py  urls.py  views.py
bank/bankapp/templates/bankapp/: login.html  main.html  savings.html  show_expenses.html
