[tool.poetry]
name = "dj"
version = "0.1.0"
description = ""
authors = ["OlexandrSamus <olexandr.samus.2004@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
password-validator = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
